import pieza.Pieza;

public class Casilla {
    private Pieza pieza;
    public Casilla(Pieza pieza) {
        this.pieza = pieza;
    }
}
