public enum Estado {
    LIBRE,
    OCUPADO;
}
