public class Jugador {
    private String nombre;

    public Jugador(String nombre) {
        this.nombre = nombre;
    }

    public void moverPieza(Tablero tablero, int posicioninical, int posicionfinal) {

    }
}
