public class PartidoDeAjedrez {


    public PartidoDeAjedrez(Jugador jugador1, Jugador jugador2) {


    }
}
