package movimiento;

public interface Diagonal {
    boolean moverEnFormaDiagonal(int xposición, int yPosición);
}
