package movimiento;

public interface Horizontal {
    boolean moverDeFormaHorizontal(int yposiciónFinal);
}

