package movimiento;

public interface Vertical {
    boolean moverDeFormaVertical(int xPosiciónFinal);
}
