package pieza;

public enum Color {
  BLANCO,NEGRO;
}
